--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -18,7 +18,7 @@ ruleset=🚀 节点选择,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 
 # 表示创建一个叫 节点选择 的 select 策略组,并向其中**依次**添加名字不包含'美国'或'日本'的节点
-custom_proxy_group=🚀 TIKTOK香港No`select`[]♻️ 自动选择`[]DIRECT`(^(?!.*(美国|日本)).*)
+custom_proxy_group=🚀 TIKTOK香港No`select`[]♻️ 自动选择`[]DIRECT`(^(?!.*(HK|香港)).*)
 
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
