--- a/nodnsleak11.ini
+++ b/nodnsleak11.ini
@@ -1,6 +1,6 @@
 [custom]
 ;解决DNS泄露，无分流群组
-ruleset=TIKTOK香港No,[]DOMAIN-KEYWORD,tiktok
+ruleset=TIKTOK,[]DOMAIN-KEYWORD,tiktok
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
@@ -16,7 +16,7 @@ ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=TIKTOK香港No`select`[]♻️ 自动选择`[]DIRECT`(^(?!.*(HK|香港)).*)
+custom_proxy_group=TIKTOK`select`[]♻️ 自动选择`[]DIRECT`(^(?!.*(HK|香港)).*)
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
