--- a/nodnsleak12.ini
+++ b/nodnsleak12.ini
@@ -16,7 +16,7 @@ ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=TIKTOK`select`[]♻️ 自动选择`[]DIRECT`(^(?!.*(HK|香港)).*)
+custom_proxy_group=TIKTOK`select`(^(?!.*(HK)).*)
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
