--- a/nodnsleak20.ini
+++ b/nodnsleak20.ini
@@ -17,7 +17,6 @@ ruleset=节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=TIKTOK`select`[]US`[]TW`[]SG`[]DE`[]GB
-
+custom_proxy_group=TIKTOK`select`[](^(?!.*(HK)).*)
 enable_rule_generator=true
 overwrite_original_rules=true
