--- a/nodnsleak2.ini
+++ b/nodnsleak2.ini
@@ -1,5 +1,6 @@
 [custom]
 ;解决DNS泄露，无分流群组
+ruleset=直连,[]DOMAIN dash.cloudflare.com
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,tiktok
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
@@ -18,5 +19,6 @@ ruleset=节点选择,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=TIKTOK`select`[]♻️ 自动选择`[]DIRECT`[](^(?!.*(HK)).*)
+custom_proxy_group=直连`select`[]♻️ 自动选择`[]DIRECT`.*
 enable_rule_generator=true
 overwrite_original_rules=true
