Update and rename nodnsleak2.ini to nodnsleak3.ini

--- a/nodnsleak3.ini
+++ b/nodnsleak3.ini
@@ -1,6 +1,6 @@
 [custom]
 ;解决DNS泄露，无分流群组
-ruleset=直连,[]DOMAIN dash.cloudflare.com
+ruleset=直连,[]DOMAIN,dash.cloudflare.com
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,tiktok
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
