--- a/nodnsleak0.ini
+++ b/nodnsleak0.ini
@@ -1,6 +1,8 @@
 [custom]
 ;解决DNS泄露，无分流群组
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,tiktok
+ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapidestiny
+ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmfreedomproxy
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
