--- a/nodnsleak0.ini
+++ b/nodnsleak0.ini
@@ -3,7 +3,8 @@
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,tiktok
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapidestiny
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmfreedomproxy
-ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapinodeudzn.xyz
+ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmfreedomproxy.one
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -19,7 +20,7 @@ ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=TIKTOK`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://connectivitycheck.platform.hicloud.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
