Update and rename nodnsleak0.ini to nodnsleak00.ini

--- a/nodnsleak00.ini
+++ b/nodnsleak00.ini
@@ -3,8 +3,7 @@
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,tiktok
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapidestiny
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmfreedomproxy
-ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapinodeudzn.xyz
-ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmfreedomproxy.one
+ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapinodeudzn
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
