--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -29,12 +29,11 @@ ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎵 TikTok,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
-ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+#ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+#ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🤖 OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+#ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -50,14 +49,13 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://connectivitycheck.platform.hicloud.com/generate_204`600,,250
-custom_proxy_group=📲 电报消息`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=📺 国外直播`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📹 油管视频`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🎵 TikTok`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📺 国外直播`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=📲 电报消息`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📺 巴哈姆特`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]DIRECT`[]♻️ 自动选择`.*
-custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+#custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]DIRECT`[]♻️ 自动选择`.*
+#custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🤖 OpenAI`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
