--- a/zhibo.ini
+++ b/zhibo.ini
@@ -4,9 +4,11 @@ ruleset=zhibo,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=zhibo,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=zhibo,[]DOMAIN-KEYWORD,afreecatv.com
 ruleset=TIKTOK,[]DOMAIN-KEYWORD,tiktok
-ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapidestiny
-ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmfreedomproxy
-ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapinodeudzn
+#ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapidestiny
+#ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmfreedomproxy
+#ruleset=TIKTOK,[]DOMAIN-KEYWORD,jmapinodeudzn
+ruleset=🤖 OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list
+ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -21,6 +23,7 @@ ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
+custom_proxy_group=🤖 OpenAI`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=TIKTOK`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=zhibo`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://connectivitycheck.platform.hicloud.com/generate_204`300,,50
