--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -15,9 +15,9 @@
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
-ruleset=TIKTOK,[]DOMAIN-KEYWORD,midea.net
-ruleset=TIKTOK,[]DOMAIN-KEYWORD,midea.cn
-ruleset=TIKTOK,[]DOMAIN-KEYWORD,midea.com
+ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.net
+ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.cn
+ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.com
 ruleset=DIRECT,[]DOMAIN-SUFFIX,wtradv.market.xiaomi.com
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/YuanMoo/ClashCustomRule/master/speedtest.list
