--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -15,6 +15,7 @@
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
+ruleset=DIRECT,[]DOMAIN-KEYWORD,123pan
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.net
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.cn
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.com
