--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -42,6 +42,7 @@ ruleset=🤖 OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 #ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,tktn.be
 ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,mobilefuse.com
+ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,dewrain.life
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
