--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -15,7 +15,7 @@
 ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,tktn.be
 ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,mobilefuse.com
 ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,dewrain.life
-ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,dewrain.life
+ruleset=📞 Talkatone,https://raw.githubusercontent.com/a131656/OPclash/main/guowai.list
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
