--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -23,6 +23,7 @@ ruleset=DIRECT,[]DOMAIN-KEYWORD,123pan
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.net
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.cn
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.com
+ruleset=DIRECT,[]DOMAIN-KEYWORD,ffzy-play6.com
 ruleset=DIRECT,[]DOMAIN-SUFFIX,wtradv.market.xiaomi.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
