--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -23,8 +23,12 @@ ruleset=DIRECT,[]DOMAIN-KEYWORD,123pan
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.net
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.cn
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.com
-ruleset=DIRECT,[]DOMAIN-KEYWORD,ffzy-play6.com
 ruleset=DIRECT,[]DOMAIN-SUFFIX,wtradv.market.xiaomi.com
+;tvbox等
+ruleset=DIRECT,[]DOMAIN-KEYWORD,ffzy-play6.com
+ruleset=DIRECT,[]DOMAIN-KEYWORD,lyhuicheng.com
+ruleset=DIRECT,[]DOMAIN-KEYWORD,ffzy-online5.com
+;
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/YuanMoo/ClashCustomRule/master/speedtest.list
