--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -29,6 +29,7 @@ ruleset=DIRECT,[]DOMAIN-KEYWORD,ffzy-play6.com
 ruleset=DIRECT,[]DOMAIN-KEYWORD,lyhuicheng.com
 ruleset=DIRECT,[]DOMAIN-KEYWORD,ffzy-online5.com
 ;
+ruleset=🚀 节点选择,[]DOMAIN-KEYWORD,githubusercontent.com
 ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/YuanMoo/ClashCustomRule/master/speedtest.list
