--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -62,10 +62,10 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://connectivitycheck.platform.hicloud.com/generate_204`600,,250
-custom_proxy_group=📺 国外直播`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
-custom_proxy_group=📹 油管视频`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=📺 国外直播`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=🎵 TikTok`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=📲 电报消息`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
