--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -12,13 +12,14 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-;ruleset=Talkatone,[]DOMAIN-KEYWORD,tktn.be
-;ruleset=Talkatone,[]DOMAIN-KEYWORD,mobilefuse.com
-;ruleset=Talkatone,[]DOMAIN-KEYWORD,dewrain.life
-ruleset=Talkatone,https://raw.githubusercontent.com/a131656/OPclash/main/guowai.list
+;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,tktn.be
+;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,mobilefuse.com
+;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,dewrain.life
+ruleset=📞 Talkatone,https://raw.githubusercontent.com/a131656/OPclash/main/guowai.list
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
+ruleset=👀 这个那个,[]DOMAIN-KEYWORD,96779913.com
 ruleset=DIRECT,[]DOMAIN-KEYWORD,123pan
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.net
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.cn
@@ -79,7 +80,8 @@ custom_proxy_group=🤖 OpenAI`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自
 ;custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 ;custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 ;custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
-custom_proxy_group=Talkatone`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=📞 Talkatone`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=👀 这个那个`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
