--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -22,6 +22,7 @@ ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
 ruleset=👀 这个那个,https://raw.githubusercontent.com/a131656/OPclash/main/zhe.list
 ;ruleset=👀 这个那个,[]DOMAIN-KEYWORD,96779913.com
 ;ruleset=👀 这个那个,[]DOMAIN-KEYWORD,5lu4.com
+ruleset=📺 PikPak,[]DOMAIN-KEYWORD,mypikpak.com
 ;
 ruleset=DIRECT,[]DOMAIN-KEYWORD,123pan
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.net
@@ -85,6 +86,7 @@ custom_proxy_group=🤖 OpenAI`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自
 ;custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=📞 Talkatone`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=👀 这个那个`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=📺 PikPak`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
