--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -70,7 +70,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.apple.com/library/test/success.html`600,,250
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.apple.com/library/test/success.html`900,,250
 ;custom_proxy_group=♻️ 自动选择`url-test`.*`http://connectivitycheck.platform.hicloud.com/generate_204`900,,250
 custom_proxy_group=📺 国外直播`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
