--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -12,6 +12,8 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🔎 DNS解析,[]DOMAIN,dns.google
+ruleset=🔎 DNS解析,[]DOMAIN,dns10.quad9.net
 ;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,tktn.be
 ;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,mobilefuse.com
 ;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,dewrain.life
@@ -89,6 +91,7 @@ custom_proxy_group=🤖 OpenAI`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自
 ;custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=📞 Talkatone`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=👀 这个那个`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=🔎 DNS解析`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=📺 PikPak`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
