--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -22,6 +22,7 @@ ruleset=📺 国外直播,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,cloudflare.com
+ruleset=📺 国外直播,[]DOMAIN-KEYWORD,api.cloudflare.com
 ruleset=👀 这个那个,https://raw.githubusercontent.com/a131656/OPclash/main/zhe.list
 ;ruleset=👀 这个那个,[]DOMAIN-KEYWORD,96779913.com
 ;ruleset=👀 这个那个,[]DOMAIN-KEYWORD,5lu4.com
