--- a/qita.ini
+++ b/qita.ini
@@ -8,20 +8,20 @@ ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 
-ruleset=国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
-ruleset=国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+ruleset=🚀 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
+ruleset=🚀 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 
 
 ruleset=国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=AI`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
-custom_proxy_group=GitHub`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
-custom_proxy_group=TikTok`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
-custom_proxy_group=流媒体`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
-custom_proxy_group=国外`select`[]DIRECT`.*
+custom_proxy_group=🚀 国外`select`[]DIRECT`.*
 custom_proxy_group=国内`select`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
+custom_proxy_group=AI`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=GitHub`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=TikTok`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=流媒体`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
 
 ;3、启用规则集
 
