--- a/clash-xin.ini
+++ b/clash-xin.ini
@@ -36,7 +36,7 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;2、策略组
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
 custom_proxy_group=📺 国外直播`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
