--- a/qita.ini
+++ b/qita.ini
@@ -1,27 +1,45 @@
 ;1、域名组
+;ruleset=🔎 DNS解析,[]DOMAIN,dns.google
+;ruleset=🔎 DNS解析,[]DOMAIN,dns10.quad9.net
+;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,tktn.be
+;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,mobilefuse.com
+;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,dewrain.life
+ruleset=📞 Talkatone,https://raw.githubusercontent.com/a131656/OPclash/main/guowai.list
+ruleset=📺 国外直播,[]DOMAIN-KEYWORD,twitch.tv
+ruleset=📺 国外直播,[]DOMAIN-KEYWORD,ttvnw.net
+ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
+ruleset=📺 国外直播,[]DOMAIN-KEYWORD,cloudflare.com
+ruleset=📺 国外直播,[]DOMAIN-KEYWORD,api.cloudflare.com
+ruleset=👀 这个那个,https://raw.githubusercontent.com/a131656/OPclash/main/zhe.list
+;ruleset=👀 这个那个,[]DOMAIN-KEYWORD,96779913.com
+;ruleset=👀 这个那个,[]DOMAIN-KEYWORD,5lu4.com
+ruleset=📺 PikPak,[]DOMAIN-KEYWORD,mypikpak.com
 
 ruleset=AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
-ruleset=GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
+;ruleset=GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
 ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-
 ruleset=🚀 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
 ruleset=🚀 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 
-
-ruleset=国内,[]FINAL
+ruleset=漏网之鱼,[]FINAL
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=🚀 国外`select`[]DIRECT`.*
-custom_proxy_group=国内`select`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
-custom_proxy_group=AI`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
-custom_proxy_group=GitHub`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+;custom_proxy_group=GitHub`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=📺 国外直播`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=TikTok`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=AI`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=流媒体`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=📞 Talkatone`select``[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=👀 这个那个`select``[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=📺 PikPak`select``[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+;custom_proxy_group=📲 电报消息`select`[]🚀 国外`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=漏网之鱼`select`[]DIRECT`.*
 
 ;3、启用规则集
 
