--- a/clash_20241018.ini
+++ b/clash_20241018.ini
@@ -1,5 +1,10 @@
 ;1、域名组
 
+ruleset=国外直播,[]DOMAIN-KEYWORD,twitch.tv
+ruleset=国外直播,[]DOMAIN-KEYWORD,ttvnw.net
+ruleset=国外直播,[]DOMAIN-KEYWORD,afreecatv.com
+ruleset=国外直播,[]DOMAIN-KEYWORD,cloudflare.com
+ruleset=国外直播,[]DOMAIN-KEYWORD,api.cloudflare.com
 ruleset=AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
 ruleset=GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
 ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
@@ -18,6 +23,7 @@ ruleset=国内,[]FINAL
 
 custom_proxy_group=国外`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
+custom_proxy_group=国外直播`select`[]国外直播`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=AI`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=GitHub`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=TikTok`select`[]国外`[]DIRECT`[]自动选择`.*
