--- a/clash_20241018.ini
+++ b/clash_20241018.ini
@@ -23,7 +23,7 @@ ruleset=国内,[]FINAL
 
 custom_proxy_group=国外`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
-custom_proxy_group=国外直播`select`[]国外直播`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=国外直播`select`[]国外`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=AI`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=GitHub`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=TikTok`select`[]国外`[]DIRECT`[]自动选择`.*
