--- a/clash_20241018.ini
+++ b/clash_20241018.ini
@@ -1,5 +1,6 @@
 ;1、域名组
 
+ruleset=Talkatone,https://raw.githubusercontent.com/a131656/OPclash/main/guowai.list
 ruleset=国外直播,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=国外直播,[]DOMAIN-KEYWORD,afreecatv.com
@@ -24,6 +25,7 @@ ruleset=国内,[]FINAL
 custom_proxy_group=国外`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
 custom_proxy_group=国外直播`select`[]国外`[]DIRECT`[]自动选择`.*
+custom_proxy_group=Talkatone`select``[]国外`[]DIRECT`[]♻️ 自动选择`.
 custom_proxy_group=AI`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=GitHub`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=TikTok`select`[]国外`[]DIRECT`[]自动选择`.*
