--- a/clash_20241018.ini
+++ b/clash_20241018.ini
@@ -17,6 +17,7 @@ ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script
 
 ruleset=国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
 ruleset=国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+
 ruleset=国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
@@ -24,7 +25,7 @@ ruleset=国内,[]FINAL
 custom_proxy_group=国外`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
 custom_proxy_group=国外直播`select`[]国外`[]DIRECT`[]自动选择`.*
-custom_proxy_group=Talkatone`select``[]国外`[]DIRECT`[]♻️ 自动选择`.
+custom_proxy_group=Talkatone`select`[]国外`[]DIRECT`[]♻️ 自动选择`.
 custom_proxy_group=AI`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=GitHub`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=TikTok`select`[]国外`[]DIRECT`[]自动选择`.*
