--- a/clash_20241018.ini
+++ b/clash_20241018.ini
@@ -6,6 +6,8 @@ ruleset=国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=国外直播,[]DOMAIN-KEYWORD,afreecatv.com
 ruleset=国外直播,[]DOMAIN-KEYWORD,cloudflare.com
 ruleset=国外直播,[]DOMAIN-KEYWORD,api.cloudflare.com
+ruleset=这个那个,https://raw.githubusercontent.com/a131656/OPclash/main/zhe.list
+
 ruleset=AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
 ruleset=GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
 ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
@@ -26,6 +28,7 @@ custom_proxy_group=国外`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
 custom_proxy_group=国外直播`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=Talkatone`select`[]国外`[]DIRECT`[]自动选择`.*
+custom_proxy_group=这个那个`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=AI`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=GitHub`select`[]国外`[]DIRECT`[]自动选择`.*
 custom_proxy_group=TikTok`select`[]国外`[]DIRECT`[]自动选择`.*
