--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -27,6 +27,7 @@ ruleset=👀 这个那个,https://raw.githubusercontent.com/a131656/OPclash/main
 ;ruleset=👀 这个那个,[]DOMAIN-KEYWORD,96779913.com
 ;ruleset=👀 这个那个,[]DOMAIN-KEYWORD,5lu4.com
 ruleset=📺 PikPak,[]DOMAIN-KEYWORD,mypikpak.com
+ruleset=🎵 TikTok,[]DOMAIN-KEYWORD,pitaya-clientai.com
 ;
 ruleset=DIRECT,[]DOMAIN-KEYWORD,123pan
 ruleset=DIRECT,[]DOMAIN-KEYWORD,midea.net
