--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -19,7 +19,7 @@ ruleset=🔎 DNS解析,[]DOMAIN,dns10.quad9.net
 ;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,mobilefuse.com
 ;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,dewrain.life
 ruleset=📞 Talkatone,https://raw.githubusercontent.com/a131656/OPclash/main/guowai.list
-ruleset=📞 Talkatone,https://raw.githubusercontent.com/a131656/OPclash/refs/heads/main/bncr.list
+ruleset=Bncr,https://raw.githubusercontent.com/a131656/OPclash/refs/heads/main/bncr.list
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
@@ -96,6 +96,7 @@ custom_proxy_group=🤖 OpenAI`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自
 custom_proxy_group=📞 Talkatone`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=👀 这个那个`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=🔎 DNS解析`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
+custom_proxy_group=Bncr`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=📺 PikPak`select``[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
