--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -13,6 +13,7 @@
 
 ;设置规则标志位
 
+ruleset=👀 这个那个,[]DOMAIN,anti-ad.net
 ruleset=🔎 DNS解析,[]DOMAIN,dns.google
 ruleset=🔎 DNS解析,[]DOMAIN,dns10.quad9.net
 ;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,tktn.be
