--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -94,7 +94,7 @@ custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(a117|谷歌云)).*)`http
 custom_proxy_group=📺 国外直播`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`[]🇺🇸 美国`[]🇳🇱 荷兰`[]德国`[]韩国`[]英国`.*
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`[]🇺🇸 美国`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
 ;custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]♻️ 自动选择`.*
 ;custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`.*
