--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -80,9 +80,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
 
 ;表示创建一个叫 节点选择 的 url-test 策略组,并向其中**依次**添加名字不包含'a117'或'谷歌云'的节点
-custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(a117|谷歌云)).*)`http://captive.apple.com/generate_204`900,,250
+;custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(a117|谷歌云)).*)`http://captive.apple.com/generate_204`900,,250
 ;20250606
-;custom_proxy_group=♻️ 自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://captive.apple.com/generate_204`900,,250
 
 ;custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.apple.com/library/test/success.html`900,,250
 ;custom_proxy_group=♻️ 自动选择`url-test`.*`http://connectivitycheck.platform.hicloud.com/generate_204`900,,250
