--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -12,7 +12,8 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-
+ruleset=Bncr,[]IP-CIDR,172.17.0.8/32
+ruleset=Bncr,https://raw.githubusercontent.com/a131656/OPclash/refs/heads/main/bncr.list
 ruleset=👀 这个那个,[]DOMAIN,anti-ad.net
 ruleset=🔎 DNS解析,[]DOMAIN,dns.google
 ruleset=🔎 DNS解析,[]DOMAIN,dns10.quad9.net
@@ -20,7 +21,6 @@ ruleset=🔎 DNS解析,[]DOMAIN,dns10.quad9.net
 ;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,mobilefuse.com
 ;ruleset=📞 Talkatone,[]DOMAIN-KEYWORD,dewrain.life
 ruleset=📞 Talkatone,https://raw.githubusercontent.com/a131656/OPclash/main/guowai.list
-ruleset=Bncr,https://raw.githubusercontent.com/a131656/OPclash/refs/heads/main/bncr.list
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,twitch.tv
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,ttvnw.net
 ruleset=📺 国外直播,[]DOMAIN-KEYWORD,afreecatv.com
