--- a/dns-gai.ini
+++ b/dns-gai.ini
@@ -12,7 +12,8 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=Bncr,[]IP-CIDR,172.17.0.8/32
+ruleset=Bncr,[]SRC-IP-CIDR,172.17.0.8/32
+;ruleset=Bncr,[]IP-CIDR,172.17.0.8/32
 ruleset=Bncr,https://raw.githubusercontent.com/a131656/OPclash/refs/heads/main/bncr.list
 ruleset=👀 这个那个,[]DOMAIN,anti-ad.net
 ruleset=🔎 DNS解析,[]DOMAIN,dns.google
